feat: Add IntervalCalculator and improve stock data fetching
- Add IntervalCalculator class for dynamic interval calculation based on date range
- Implement comprehensive test suite for IntervalCalculator
- Add StockFetcherIntervalTest for testing interval-based stock data fetching
- Update StockFetcher to use IntervalCalculator for optimal data retrieval
- Improve ChartResponse with better data handling
- Update CacheConfig for better performance
- Add MSFT test data file for comprehensive testing
- Enhance various service classes and their corresponding tests
- Update frontend app.js for better user experience